LinkedMap重新公开gerFirstNode,getNode; zege 升级到2.0.0（需要下一个发布才能完全解决问题）。 重新生成MetaGame.Gen