@@ -51,7 +51,7 @@ public final class tLoad extends TableX<metagame.builtin.World.BServerMapKey, me
         var _v_ = new metagame.builtin.World.BServerMapKey();
         _p_.add("__key");
         _v_.decodeResultSet(_p_, _s_);
-        _p_.remove(_p_.size() - 1);
+        _p_.removeLast();
         return _v_;
     }
 
@@ -60,7 +60,7 @@ public final class tLoad extends TableX<metagame.builtin.World.BServerMapKey, me
         var _p_ = new java.util.ArrayList<String>();
         _p_.add("__key");
         _v_.encodeSQLStatement(_p_, _s_);
-        _p_.remove(_p_.size() - 1);
+        _p_.removeLast();
     }
 
     @Override
